force-app/main/default/objects/Demo1__c/Demo1__c.object-meta.xml
<CustomObject>
    <label>Demo1</label>
    <nameField>
        <label>Demo1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>