force-app/main/default/objects/Demo1__c/fields/Cross_Formula__c.field-meta.xml
<CustomField>
    <fullName>Cross_Formula__c</fullName>
    <formula>demo2__r.demo3__r.demo4__r.demo5__r.Owner:User.Contact.Account.Opportunity__r.Contract.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Formula</label>
    <type>Text</type>
</CustomField>