force-app/main/default/objects/Demo1__c/fields/demo2__c.field-meta.xml
<CustomField>
    <fullName>demo2__c</fullName>
    <label>demo2</label>
    <referenceTo>demo2__c</referenceTo>
    <relationshipLabel>Demo1s</relationshipLabel>
    <relationshipName>Demo1s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>